--- a/Navigation.ipynb
+++ b/Navigation.ipynb
@@ -286,10 +286,10 @@
     "        state = env_info.vector_observations[0]            # get the current state\n",
     "        score = 0\n",
     "        for t in range(max_t):\n",
-    "            action = agent.act(state, eps)                 # choose action (A) based on current agent's state (S)\n",
-    "            env_info = env.step(action)[brain_name]        # send the action (A) to the environment\n",
-    "            next_state = env_info.vector_observations[0]   # get the next state (S')\n",
-    "            reward = env_info.rewards[0]                   # get the reward (R)\n",
+    "            action = agent.act(state, eps)                 # choose action based on current state\n",
+    "            env_info = env.step(action)[brain_name]        # send the action to the environment\n",
+    "            next_state = env_info.vector_observations[0]   # get the next state \n",
+    "            reward = env_info.rewards[0]                   # get the reward \n",
     "            done = env_info.local_done[0]                  # see if episode has finished\n",
     "            \n",
     "            agent.step(state, action, reward, next_state, done)  # agent execute the action to move to next state\n",
